Fixed bug #50168 (FastCGI fails with wrong error on HEAD request to non-existant file)